--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: liquid_swipe_upgrade
-description: "A new Flutter package project."
-version: 0.0.1
+description: "A Flutter package that provides an upgraded version of the liquid_swipe package."
+version: 0.0.2
 homepage: https://github.com/eyupakky/liquid_swipe_upgrade.git
 
 environment:
